Make Changes for Repro

--- a/component-library/package.json
+++ b/component-library/package.json
@@ -12,7 +12,8 @@
   "unpkg": "dist/component-library/component-library.esm.js",
   "files": [
     "dist/",
-    "loader/"
+    "loader/",
+    "hydrate/"
   ],
   "scripts": {
     "build": "stencil build --docs",
